--- a/order-serviceb.properties
+++ b/order-serviceb.properties
@@ -6,6 +6,10 @@ spring.sql.init.mode=always
 spring.jpa.show-sql=true
 spring.datasource.username=root
 spring.datasource.password=
+
+customer-service.url=http://localhost:8080/customer-service
+product-serviceb.url=http://localhost:8080/product-serviceb
+payment-service.url=http://localhost:8080/payment-service
     
 keycloak.realm= microservices-realm
 keycloak.auth-server-url= http://localhost:8180/
