--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
     
 keycloak.realm= microservices-realm
 keycloak.auth-server-url= http://localhost:8180/
