--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -1,11 +1,11 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://docker-mysql:3307/inventory-service
+spring.datasource.url=jdbc:mysql://docker-mysql:3306/inventory-service
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
     
 keycloak.realm= microservices-realm
 keycloak.auth-server-url= http://localhost:8180/
