--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://docker-mysql:3306/inventory-service?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${docker-mysql:localhost}:3306/inventory-service?createDatabaseIfNotExist=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
