--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -3,11 +3,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/inventory-service?createDatabaseIfNotExist=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.batch.jdbc.initialize-schema=always
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
     
 keycloak.realm= microservices-realm
 keycloak.auth-server-url= http://localhost:8180/
