--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=${MYSQL_PW:}
     
 keycloak.realm= microservices-realm
 keycloak.auth-server-url= http://localhost:8180/
