--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${DOCKER_MYSQL:localhost}:3306/inventory-service?createDatabaseIfNotExist=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/inventory-service?createDatabaseIfNotExist=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.batch.jdbc.initialize-schema=always
 spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
