--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mysql://${DOCKER_MYSQL:localhost}:3306/inventory-serv
 #spring.datasource.url=jdbc:mysql://localhost:3306/inventory-service?createDatabaseIfNotExist=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.batch.jdbc.initialize-schema=always
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
