--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -1,5 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://${DOCKER_MYSQL:localhost}:3306/inventory-service?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://${DOCKER_MYSQL:localhost}:3306/inventory-service?createDatabaseIfNotExist=true
+spring.datasource.url=${SPRING_DATA_SOURCE_URL:jdbc:mysql://localhost:3306/inventory-service?createDatabaseIfNotExist=true}
 #spring.datasource.url=jdbc:mysql://localhost:3306/inventory-service?createDatabaseIfNotExist=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.batch.jdbc.initialize-schema=always
