--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
-spring.datasource.username={MYSQL_UR:root}
+spring.datasource.username={MYSQL_USR:root}
 spring.datasource.password=${MYSQL_PW:}
     
 keycloak.realm= microservices-realm
