--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -9,7 +9,7 @@ spring.jpa.generate-ddl=true
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
 spring.datasource.username=${MYSQL_USR:root}
-spring.datasource.password=${MYSQL_PW:root}
+spring.datasource.password=${MYSQL_PW:}
     
 keycloak.realm= microservices-realm
 keycloak.auth-server-url= http://localhost:8180/
