--- a/product-serviceb.properties
+++ b/product-serviceb.properties
@@ -1,11 +1,12 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/product-serviceb
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=${SPRING_DATA_SOURCE_URL:jdbc:mysql://localhost:3306/product-serviceb?createDatabaseIfNotExist=true}
+spring.batch.jdbc.initialize-schema=always
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=${MYSQL_USR:root}
+spring.datasource.password=${MYSQL_PW:}
     
 ###keycloak.realm= microservices-realm
 ###keycloak.auth-server-url= http://localhost:8180/
