--- a/order-serviceb.properties
+++ b/order-serviceb.properties
@@ -1,11 +1,12 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/order-serviceb?serverTimezone=UTC
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=${SPRING_DATA_SOURCE_URL:jdbc:mysql://localhost:3306/order-serviceb?createDatabaseIfNotExist=true}
+spring.batch.jdbc.initialize-schema=always
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=${MYSQL_USR:root}
+spring.datasource.password=${MYSQL_PW:}
 
 customer-service.url=http://localhost:8080/customer-service
 product-serviceb.url=http://localhost:8080/product-serviceb
