--- a/inventory-service.properties
+++ b/inventory-service.properties
@@ -1,6 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=${SPRING_DATA_SOURCE_URL:jdbc:mysql://localhost:3306/inventory-service?createDatabaseIfNotExist=true}
 spring.batch.jdbc.initialize-schema=always
+spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.sql.init.mode=always
