--- a/product-serviceb.properties
+++ b/product-serviceb.properties
@@ -9,12 +9,12 @@ spring.jpa.show-sql=true
 spring.datasource.username=${MYSQL_USR:root}
 spring.datasource.password=${MYSQL_PW:}
     
-###keycloak.realm= microservices-realm
-###keycloak.auth-server-url= http://localhost:8180/
-###keycloak.resource= controle-jee-client
+keycloak.realm= microservices-realm
+keycloak.auth-server-url= http://localhost:7080/
+keycloak.resource= controle-jee-client
 #keycloak.public-client= false
 ##keycloak.principal-attribute= name
-###keycloak.bearer-only=true
+keycloak.bearer-only=true
 #keycloak.cors=true
 	
 #management.endpoints.web.exposure.include=*
